Add routes for product disabling/enabling
